--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -1,26 +1,26 @@
 ---
-import '../styles/global.scss'
+import '../styles/global.scss';
 
 export interface Props {
-  title: string
+  	title: string;
 }
 
-const { title } = Astro.props
+const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
+		<meta name="generator" content={Astro.generator} />
+		<title>{title}</title>
+	</head>
 
-  <body>
-    <slot />
-  </body>
+	<body>
+		<slot />
+	</body>
 </html>
 
 <script src="../scripts/entry.ts"></script>
