--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,24 +1,22 @@
 ---
-import CanvasContainer from '../components/CanvasContainer.astro'
-import Layout from '../components/Layout.astro'
-import Link from '../components/Link.astro'
+import CanvasContainer from '../components/CanvasContainer.astro';
+import Layout from '../components/Layout.astro';
 ---
 
 <Layout title="Demo">
-  <main>
-    <CanvasContainer />
-    <Link class="link" href="https://github.com/nemutas/three-template-with-astro" target="_blank" rel="noopener noreferrer">Github</Link>
-  </main>
+  	<main>
+		<CanvasContainer />
+	</main>
 </Layout>
 
 <style lang="scss">
-  main {
-    width: 100%;
-    height: 100%;
-  }
-  .link {
-    position: absolute;
-    bottom: 1rem;
-    right: 2rem;
-  }
+	main {
+		width: 100%;
+		height: 100%;
+	}
+	.link {
+		position: absolute;
+		bottom: 1rem;
+		right: 2rem;
+	}
 </style>
