--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,4 @@
 @use 'ress';
-@use './imports.scss';
 @use './mixins/medias.scss' as *;
 @use './mixins/fonts.scss';
 
@@ -14,18 +13,19 @@ html {
 }
 
 body {
-  position: relative;
-  width: 100%;
-  height: 100%;
+	position: relative;
+	margin: 0;
+	width: 100%;
+	height: 100%;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 ul {
-  list-style: none;
+  	list-style: none;
 }
 
 h1,
@@ -34,6 +34,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-size: inherit;
-  font-weight: inherit;
+	font-size: inherit;
+	font-weight: inherit;
 }
