Image in public folder.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,6 @@
 ---
 import Layout from '../layouts/aboutLayout.astro';
 import { Image } from 'astro:assets';
-import portraitPhoto from '/images/profile_pic_copy.jpg';
-import slugPhoto from '/images/slug1.jpg';
 ---
 
 <Layout title="About">
@@ -11,7 +9,7 @@ import slugPhoto from '/images/slug1.jpg';
 
 			<div>
 				<h2 class="center-text">About me</h2>
-				<Image class="center-img" src={portraitPhoto} alt="Portrait photo of me, the website author, Luke Moore." />
+				<Image class="center-img" src='/images/profile_pic_copy.jpg' alt="Portrait photo of me, the website author, Luke Moore." />
 			</div>
 
 			<div class="justForFlex">
@@ -62,7 +60,7 @@ import slugPhoto from '/images/slug1.jpg';
 
 			<div id="contact-slug">
 				<h2>Contact</h2>
-				<Image id="slug-photo" class="center-img" src={slugPhoto} alt="A banana slug eats a mushroom from the stem up.">
+				<Image id="slug-photo" class="center-img" src='/images/slug1.jpg' alt="A banana slug eats a mushroom from the stem up.">
 			</div>
 
 			<div id="contact-info">
