--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/aboutLayout.astro';
 import { Image } from 'astro:assets';
 import slugPhoto from '../images/slug1.jpg';
-import portraitPhoto from '../images/profile_pic_copy.jpg';
+import portraitPhoto from '../images/profile_pics.jpg';
 
 interface Props {
    imagePath: string;
