Working on photoWheel hover. Error with about page images on deploy.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '../layouts/aboutLayout.astro';
 import { Image } from 'astro:assets';
+import portraitPhoto from '../images/profile_pic_copy.jpg';
 import slugPhoto from '../images/slug1.jpg';
-import portraitPhoto from '../images/profile_pics.jpg';
 
 interface Props {
    imagePath: string;
